<resources>
    <string name="app_name">sample-rxjava2-kotlin</string>

    <string name="check_permissions">Check permissions</string>
    <string name="enable_location">Enable location</string>
    <string name="last_network">Last network location</string>
    <string name="last_network_minute_old">Last network location 1 minute old</string>
    <string name="request_location">Request network location</string>
    <string name="complicated_request_location">Complicated request location</string>
    <string name="complicated_request_location_ignore_error">Complicated request location. Ignore error.</string>
</resources>
